// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`style props parsers media query styles Equivalent Syntax SM and MD -  [ <2 empty items>, 16, 0, [length]: 4 ] === { sm: 16, md: 0 } 1`] = `
{
  "MD": {
    "margin": 0,
  },
  "SM": {
    "margin": "1rem",
  },
}
`;

exports[`style props parsers media query styles Equivalent Syntax all media queries -  [ 4, 8, 16, 24, 32, 48, [length]: 6 ] === { _: 4, xs: 8, sm: 16, md: 24, lg: 32, xl: 48 } 1`] = `
{
  "LG": {
    "margin": "2rem",
  },
  "MD": {
    "margin": "1.5rem",
  },
  "SM": {
    "margin": "1rem",
  },
  "XL": {
    "margin": "3rem",
  },
  "XS": {
    "margin": "0.5rem",
  },
  "margin": "0.25rem",
}
`;

exports[`style props parsers media query styles Equivalent Syntax no media query base value -  [ 4, [length]: 1 ] === { _: 4 } 1`] = `
{
  "margin": "0.25rem",
}
`;

exports[`style props parsers media query styles Equivalent Syntax only MD with undefined keys -  [ <3 empty items>, 0, [length]: 4 ] === { md: 0, _: undefined, sm: undefined } 1`] = `
{
  "MD": {
    "margin": 0,
  },
}
`;

exports[`style props parsers media query styles Equivalent Syntax only XS -  [ <1 empty item>, 4, [length]: 2 ] === { xs: 4 } 1`] = `
{
  "XS": {
    "margin": "0.25rem",
  },
}
`;
